Aplicación de estilos
css

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3>VAJ| STYLE AND FASHION</h3>
-    <button id="toggleButton">¿QUIENES SOMOS?</button>
-    <div id="dropdownContent" class="hidden">
-        <p>Somos una marca de ropa emergente de Medellín, que busca posicionarse como la #1 en el mundo.</p>
+    <div class="container">
+        <div class="container_edit">
+            <h3>VAJ | STYLE AND FASHION</h3>
+            <button id="toggleButton">¿QUIENES SOMOS?</button>
+            <div id="dropdownContent" class="hidden">
+                <p>Somos una marca de ropa emergente de Medellín, que busca posicionarse como la #1 en el mundo.</p>
+            </div>
+        </div>
     </div>
+    
     <script src="app.js"></script>
 </body>
 </html>
